Tạo chức năng chỉnh sửa user Tạo trang hiển thị thông tin user
see #5

--- a/src/styles/setup/_variable.scss
+++ b/src/styles/setup/_variable.scss
@@ -1,4 +1,11 @@
 $bg-color-login: rgba(45, 21, 22, 0.5);
 $bg-color-btn-login: #731010;
 $bg-color-btn-face: #0088ff;
-$color-text: #fff
+$color-text: #fff;
+$main-bg-color-1: #efebe9 !important;
+$main-bg-color-2: #fff;
+$main-bg-color-3: #D7CCC8;
+$main-bg-color-4: #EFEBE9;
+$text-bg-color: #000;
+$text-color-2: #fff;
+$text-color-1: #8D6E63;
